--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/css-icon-2.svg" />
     <link rel="icon" type="image/png" sizes="16x16" href="/css-icon-2.svg" />
     <link rel="manifest" href="/manifest.json" />
+    <meta name="google-site-verification" content="81XwA6dHUYB7RzEmswXM5V3Lceg7FMjiRyuvuUkNZu4" />
     <meta name="theme-color" content="#4361ee" />
     <meta
       name="viewport"
@@ -33,6 +34,7 @@
         width: 100vw;
       }
     </style>
+    <meta name="google-site-verification" content="81XwA6dHUYB7RzEmswXM5V3Lceg7FMjiRyuvuUkNZu4" />
   </head>
   <body>
     <div id="root"></div>
