--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="CSS Template Library - Kumpulan template CSS modern dan responsif untuk website Anda." />
+    <meta name="keywords" content="CSS, Template, Library, Web, Responsive, Modern, Website, Frontend" />
+    <meta name="author" content="JosinBahaswan" />
+    <meta name="robots" content="index, follow" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="CSS Template Library" />
+    <meta property="og:description" content="Kumpulan template CSS modern dan responsif untuk website Anda." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-domain.com/" />
+    <meta property="og:image" content="/css-icon-1.svg" />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="CSS Template Library" />
+    <meta name="twitter:description" content="Kumpulan template CSS modern dan responsif untuk website Anda." />
+    <meta name="twitter:image" content="/css-icon-1.svg" />
     <title>CSS Template Library</title>
     <style>
       html,
